--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following are the contributions made to the original code:\n",
+    " * Implemented GPU parallelism. Added a _DistributedSampler_ as an alternative to _Sampler_.\n",
+    " * Wrapped the model into a _DataParallel_.\n",
+    " * Made modifications to the _collatebatch_ in order to pad vectors for multi-GPU tensor processing.\n",
+    " * Managed to sucesfully train on 8 NVIDIA V40.\n",
+    "\n",
+    "Due to the simplicity of the model, the training on multiple GPUs actually caused slower progress. The *second portion* of this notebook proceeds to train on a single GPU only."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "v1gYr_aoNDue"
    },
    "source": [
-    "# Data"
+    "# Multi-GPU training: setup of Data structures"
    ]
   },
   {
@@ -22,13 +42,16 @@
     "import torch\n",
     "import random\n",
     "import math\n",
+    "import torch.nn as nn\n",
+    "import torch.distributed as dist\n",
     "from pathlib import Path\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
-    "import torch.nn as nn\n",
     "from torch.optim import Optimizer\n",
+    "from torch.optim import AdamW\n",
     "from torch.optim.lr_scheduler import LambdaLR\n",
     "from torch.utils.data.distributed import DistributedSampler\n",
+    "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
     "\n",
@@ -81,10 +104,11 @@
     "  # Process features within a batch.\n",
     "  \"\"\"Collate a batch of data.\"\"\"\n",
     "  mel, speaker = zip(*batch)\n",
-    "  # Because we train the model batch by batch, we need to pad the features in the same batch to make their lengths the same.\n",
+    "  # We train the model batch by batch, we need to pad the features in the same batch to make their lengths the same.\n",
     "  mel = pad_sequence(mel, batch_first=True, padding_value=-20)  # pad log 10^(-20) which is very small value.\n",
     "  # mel: (batch size, length, 40)\n",
     "  return mel, torch.FloatTensor(speaker).long()\n",
+    "\n",
     "\n",
     "def get_dataloader(data_dir, batch_size, n_workers):\n",
     "    dataset = myDataset(data_dir)\n",
@@ -127,9 +151,6 @@
     "      d_model=d_model, dim_feedforward=128, nhead=2\n",
     "    )\n",
     "    # self.encoder = nn.TransformerEncoder(self.encoder_layer, num_layers=2)\n",
-    "\n",
-    "\n",
-    "# Remove redundant imports\n",
     "\n",
     "    # Project the the dimension of features from d_model into speaker nums.\n",
     "    self.pred_layer = nn.Sequential(\n",
@@ -190,7 +211,6 @@
     "  mels, labels = batch\n",
     "  mels = mels.to(device)\n",
     "  labels = labels.to(device)\n",
-    "  labels = labels.flatten()  # Flatten labels to 1D\n",
     "\n",
     "  outs = model(mels)\n",
     "\n",
@@ -240,52 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "chRQE7oYtw62",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using 8 GPUs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Train:  25% 501/2000 [01:37<04:31,  5.52 step/s, accuracy=0.94, loss=0.15, step=501]"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 70\u001b[0m\n\u001b[1;32m     67\u001b[0m     pbar\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 70\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparse_args\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[2], line 44\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(data_dir, save_path, batch_size, n_workers, valid_steps, warmup_steps, total_steps, save_steps)\u001b[0m\n\u001b[1;32m     41\u001b[0m pbar \u001b[38;5;241m=\u001b[39m tqdm(total\u001b[38;5;241m=\u001b[39mvalid_steps, ncols\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrain\u001b[39m\u001b[38;5;124m\"\u001b[39m, unit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m step\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m step \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(total_steps):\n\u001b[0;32m---> 44\u001b[0m     batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43miter\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m     loss, accuracy \u001b[38;5;241m=\u001b[39m model_fn(batch, model, criterion, device)\n\u001b[1;32m     47\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:633\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    630\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    631\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    632\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 633\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    634\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    635\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    636\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    637\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:677\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    675\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_next_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    676\u001b[0m     index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_next_index()  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 677\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dataset_fetcher\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfetch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    678\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m    679\u001b[0m         data \u001b[38;5;241m=\u001b[39m _utils\u001b[38;5;241m.\u001b[39mpin_memory\u001b[38;5;241m.\u001b[39mpin_memory(data, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[idx] \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/_utils/fetch.py:51\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     49\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset\u001b[38;5;241m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m         data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     53\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset[possibly_batched_index]\n",
-      "Cell \u001b[0;32mIn[1], line 48\u001b[0m, in \u001b[0;36mmyDataset.__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# Segment mel-spectrogram into \"segment_len\" frames.\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(mel) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msegment_len:\n\u001b[1;32m     47\u001b[0m   \u001b[38;5;66;03m# Randomly get the starting point of the segment.\u001b[39;00m\n\u001b[0;32m---> 48\u001b[0m   start \u001b[38;5;241m=\u001b[39m \u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandint\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msegment_len\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     49\u001b[0m   \u001b[38;5;66;03m# Get a segment with \"segment_len\" frames.\u001b[39;00m\n\u001b[1;32m     50\u001b[0m   mel \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(mel[start:start \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msegment_len])\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.optim import AdamW\n",
-    "from torch.utils.data import DataLoader\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "def parse_args():\n",
     "    \"\"\"Arguments\"\"\"\n",
     "    config = {\n",
@@ -301,16 +282,18 @@
     "    return config\n",
     "\n",
     "def main(data_dir, save_path, batch_size, n_workers, valid_steps, warmup_steps, total_steps, save_steps):\n",
-    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    dist.init_process_group(backend='nccl', init_method='env://')\n",
+    "    rank = dist.get_rank()\n",
+    "    world_size = dist.get_world_size()\n",
+    "    torch.cuda.set_device(rank)\n",
+    "    device = torch.device('cuda', rank)\n",
     "\n",
     "    dataset = myDataset(data_dir)\n",
-    "    train_loader = DataLoader(dataset, batch_size=batch_size, num_workers=n_workers)\n",
+    "    train_sampler = DistributedSampler(dataset, num_replicas=world_size, rank=rank)\n",
+    "    train_loader = DataLoader(dataset, batch_size=batch_size, sampler=train_sampler, num_workers=n_workers)\n",
     "\n",
     "    model = Classifier(d_model=80, n_spks=600, dropout=0.1).to(device)\n",
-    "\n",
-    "    if torch.cuda.device_count() > 1:\n",
-    "        print(\"Using\", torch.cuda.device_count(), \"GPUs\")\n",
-    "        model = nn.DataParallel(model)\n",
+    "    model = nn.parallel.DistributedDataParallel(model, device_ids=[rank], output_device=rank)\n",
     "\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = AdamW(model.parameters(), lr=1e-3)\n",
@@ -319,9 +302,10 @@
     "    best_accuracy = -1.0\n",
     "    best_state_dict = None\n",
     "\n",
-    "    pbar = tqdm(total=valid_steps, ncols=0, desc=\"Train\", unit=\" step\")\n",
+    "    pbar = tqdm(total=valid_steps, ncols=0, desc=\"Train\", unit=\" step\") if rank == 0 else None\n",
     "\n",
     "    for step in range(total_steps):\n",
+    "        train_sampler.set_epoch(step)\n",
     "        batch = next(iter(train_loader))\n",
     "        loss, accuracy = model_fn(batch, model, criterion, device)\n",
     "        \n",
@@ -330,22 +314,28 @@
     "        optimizer.step()\n",
     "        scheduler.step()\n",
     "\n",
-    "        pbar.update()\n",
-    "        pbar.set_postfix(loss=f\"{loss.item():.2f}\", accuracy=f\"{accuracy.item():.2f}\", step=step + 1)\n",
+    "        if rank == 0:\n",
+    "            pbar.update()\n",
+    "            pbar.set_postfix(loss=f\"{loss.item():.2f}\", accuracy=f\"{accuracy.item():.2f}\", step=step + 1)\n",
     "\n",
     "        if (step + 1) % valid_steps == 0:\n",
-    "            pbar.close()\n",
+    "            if rank == 0:\n",
+    "                pbar.close()\n",
+    "\n",
     "            valid_accuracy = valid(train_loader, model, criterion, device)\n",
     "\n",
-    "            if valid_accuracy > best_accuracy:\n",
+    "            if rank == 0 and valid_accuracy > best_accuracy:\n",
     "                best_accuracy = valid_accuracy\n",
     "                best_state_dict = model.state_dict()\n",
     "                pbar = tqdm(total=valid_steps, ncols=0, desc=\"Train\", unit=\" step\")\n",
     "\n",
-    "        if (step + 1) % save_steps == 0 and best_state_dict:\n",
+    "        if rank == 0 and (step + 1) % save_steps == 0 and best_state_dict:\n",
     "            torch.save(best_state_dict, save_path)\n",
     "            pbar.write(f\"Step {step + 1}, best model saved. (accuracy={best_accuracy:.4f})\")\n",
-    "    pbar.close()\n",
+    "\n",
+    "    if rank == 0:\n",
+    "        pbar.close()\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main(**parse_args())"
@@ -357,7 +347,43 @@
     "id": "0R2rx3AyHpQ-"
    },
    "source": [
-    "# Inference"
+    "# Single GPU training\n",
+    "\n",
+    "As no significant speedup was observed, we proceed with single GPU trianing. We redefine some important functions for single GPU."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_dataloader(data_dir, batch_size, n_workers):\n",
+    "  \"\"\"Generate dataloader\"\"\"\n",
+    "  dataset = myDataset(data_dir)\n",
+    "  speaker_num = dataset.get_speaker_number()\n",
+    "  # Split dataset into training dataset and validation dataset\n",
+    "  trainlen = int(0.9 * len(dataset))\n",
+    "  lengths = [trainlen, len(dataset) - trainlen]\n",
+    "  trainset, validset = random_split(dataset, lengths)\n",
+    "  train_loader = DataLoader(\n",
+    "    trainset,\n",
+    "    batch_size=batch_size,\n",
+    "    shuffle=True,\n",
+    "    drop_last=True,\n",
+    "    num_workers=n_workers,\n",
+    "    pin_memory=True,\n",
+    "    collate_fn=collate_batch,\n",
+    "  )\n",
+    "  valid_loader = DataLoader(\n",
+    "    validset,\n",
+    "    batch_size=batch_size,\n",
+    "    num_workers=n_workers,\n",
+    "    drop_last=True,\n",
+    "    pin_memory=True,\n",
+    "    collate_fn=collate_batch,\n",
+    "  )\n",
+    "  return train_loader, valid_loader, speaker_num"
    ]
   },
   {
@@ -529,18 +555,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
   }
  },
  "nbformat": 4,
