--- a/main.ipynb
+++ b/main.ipynb
@@ -206,22 +206,23 @@
     "\n",
     "\n",
     "def model_fn(batch, model, criterion, device):\n",
-    "  \"\"\"Forward a batch through the model.\"\"\"\n",
+    "    \"\"\"Forward a batch through the model.\"\"\"\n",
     "\n",
-    "  mels, labels = batch\n",
-    "  mels = mels.to(device)\n",
-    "  labels = labels.to(device)\n",
+    "    mels, labels = batch\n",
+    "    mels = mels.to(device)\n",
+    "    labels = labels.to(device)\n",
+    "    labels = labels.flatten()  # Flatten labels to 1D\n",
     "\n",
-    "  outs = model(mels)\n",
+    "    outs = model(mels)\n",
     "\n",
-    "  loss = criterion(outs, labels)\n",
+    "    loss = criterion(outs, labels)\n",
     "\n",
-    "  # Get the speaker id with highest probability.\n",
-    "  preds = outs.argmax(1)\n",
-    "  # Compute accuracy.\n",
-    "  accuracy = torch.mean((preds == labels).float())\n",
+    "    # Get the speaker id with highest probability.\n",
+    "    preds = outs.argmax(1)\n",
+    "    # Compute accuracy.\n",
+    "    accuracy = torch.mean((preds == labels).float())\n",
     "\n",
-    "  return loss, accuracy\n",
+    "    return loss, accuracy\n",
     "\n",
     "def valid(dataloader, model, criterion, device): \n",
     "  \"\"\"Validate on validation set.\"\"\"\n",
@@ -277,7 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
+      "\r\n",
       "Train:   0% 0/2000 [00:00<?, ? step/s]"
      ]
     },
