--- a/main.ipynb
+++ b/main.ipynb
@@ -473,7 +473,75 @@
       "\n",
       "Train:   9% 174/2000 [00:09<01:34, 19.27 step/s, accuracy=0.00, loss=6.32, step=174]\n",
       "\n",
-      "Train:  30% 606/2000 [00:32<01:18, 17.78 step/s, accuracy=0.03, loss=5.91, step=605]A\u001b[A"
+      "Train: 100% 2000/2000 [01:36<00:00, 20.64 step/s, accuracy=0.06, loss=4.44, step=2000][A\n",
+      "Valid: 100% 4832/4836 [00:07<00:00, 606.54 uttr/s, accuracy=0.20, loss=3.85]\n",
+      "Train: 100% 2000/2000 [01:14<00:00, 26.88 step/s, accuracy=0.34, loss=3.10, step=4000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 899.98 uttr/s, accuracy=0.31, loss=3.21]\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]\n",
+      "\n",
+      "                                                                                  \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:21, 24.42 step/s, accuracy=0.22, loss=3.07, step=4005][A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 4000, best model saved. (accuracy=0.3094)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:14<00:00, 26.97 step/s, accuracy=0.28, loss=3.05, step=6000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 901.77 uttr/s, accuracy=0.37, loss=2.87]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.19 step/s, accuracy=0.34, loss=3.03, step=8000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 906.15 uttr/s, accuracy=0.40, loss=2.74]\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]\n",
+      "\n",
+      "                                                                                  \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:17, 25.70 step/s, accuracy=0.31, loss=3.21, step=8005][A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 8000, best model saved. (accuracy=0.3984)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:14<00:00, 26.99 step/s, accuracy=0.47, loss=2.10, step=1e+4]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 911.41 uttr/s, accuracy=0.43, loss=2.55]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.04 step/s, accuracy=0.56, loss=1.83, step=12000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 903.30 uttr/s, accuracy=0.44, loss=2.52]\n",
+      "                                      \n",
+      "\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]                                            \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:20, 24.64 step/s, accuracy=0.72, loss=1.21, step=12005]A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 12000, best model saved. (accuracy=0.4367)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:13<00:00, 27.15 step/s, accuracy=0.47, loss=2.19, step=14000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 908.66 uttr/s, accuracy=0.46, loss=2.48]\n",
+      "Train:  69% 1378/2000 [00:50<00:22, 27.06 step/s, accuracy=0.56, loss=2.69, step=15378]"
      ]
     }
    ],
@@ -750,13 +818,4 @@
     "version": 3
    },
    "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
-}
+   
