--- a/main.ipynb
+++ b/main.ipynb
@@ -447,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -541,7 +543,49 @@
      "text": [
       "Train: 100% 2000/2000 [01:13<00:00, 27.15 step/s, accuracy=0.47, loss=2.19, step=14000]\n",
       "Valid: 100% 4832/4836 [00:05<00:00, 908.66 uttr/s, accuracy=0.46, loss=2.48]\n",
-      "Train:  69% 1378/2000 [00:50<00:22, 27.06 step/s, accuracy=0.56, loss=2.69, step=15378]"
+      "Train: 100% 2000/2000 [01:13<00:00, 27.16 step/s, accuracy=0.50, loss=2.13, step=16000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 905.57 uttr/s, accuracy=0.48, loss=2.30]\n",
+      "                                      \n",
+      "\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]                                            \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:19, 25.25 step/s, accuracy=0.62, loss=1.72, step=16005]A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 16000, best model saved. (accuracy=0.4843)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:13<00:00, 27.20 step/s, accuracy=0.59, loss=1.46, step=18000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 911.45 uttr/s, accuracy=0.51, loss=2.19]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.16 step/s, accuracy=0.59, loss=1.93, step=2e+4] \n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 911.43 uttr/s, accuracy=0.52, loss=2.14]\n",
+      "                                      \n",
+      "\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]                                            \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:20, 24.82 step/s, accuracy=0.53, loss=2.29, step=2e+4][A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 20000, best model saved. (accuracy=0.5172)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  20% 404/2000 [00:14<00:59, 26.98 step/s, accuracy=0.75, loss=1.17, step=20404]"
      ]
     }
    ],
@@ -818,4 +862,13 @@
     "version": 3
    },
    "file_extension": ".py",
-   
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
