--- a/main.ipynb
+++ b/main.ipynb
@@ -585,7 +585,95 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train:  20% 404/2000 [00:14<00:59, 26.98 step/s, accuracy=0.75, loss=1.17, step=20404]"
+      "Train: 100% 2000/2000 [01:13<00:00, 27.16 step/s, accuracy=0.62, loss=1.77, step=22000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 911.52 uttr/s, accuracy=0.51, loss=2.19]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.20 step/s, accuracy=0.56, loss=2.12, step=24000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 902.67 uttr/s, accuracy=0.54, loss=2.03]\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]\n",
+      "\n",
+      "                                                                                  \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:21, 24.33 step/s, accuracy=0.72, loss=1.07, step=24005]A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 24000, best model saved. (accuracy=0.5366)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:13<00:00, 27.07 step/s, accuracy=0.50, loss=2.38, step=26000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 904.70 uttr/s, accuracy=0.54, loss=2.02]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.21 step/s, accuracy=0.41, loss=2.13, step=28000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 910.99 uttr/s, accuracy=0.55, loss=2.02]\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]\n",
+      "\n",
+      "                                                                                  \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:24, 23.60 step/s, accuracy=0.59, loss=1.66, step=28005]A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 28000, best model saved. (accuracy=0.5468)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:13<00:00, 27.24 step/s, accuracy=0.47, loss=1.58, step=3e+4] \n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 904.16 uttr/s, accuracy=0.57, loss=1.90]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.30 step/s, accuracy=0.59, loss=1.81, step=32000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 916.29 uttr/s, accuracy=0.57, loss=1.91]\n",
+      "                                      \n",
+      "\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]                                            \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:18, 25.44 step/s, accuracy=0.59, loss=1.74, step=32005]A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 32000, best model saved. (accuracy=0.5712)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train: 100% 2000/2000 [01:13<00:00, 27.33 step/s, accuracy=0.62, loss=1.36, step=34000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 908.55 uttr/s, accuracy=0.57, loss=1.91]\n",
+      "Train: 100% 2000/2000 [01:13<00:00, 27.15 step/s, accuracy=0.62, loss=1.54, step=36000]\n",
+      "Valid: 100% 4832/4836 [00:05<00:00, 890.03 uttr/s, accuracy=0.58, loss=1.86]\n",
+      "Train:   0% 0/2000 [00:00<?, ? step/s]\n",
+      "\n",
+      "                                                                                  \n",
+      "\n",
+      "Train:   0% 5/2000 [00:00<01:22, 24.28 step/s, accuracy=0.62, loss=1.42, step=36005]A\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 36000, best model saved. (accuracy=0.5753)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:  32% 632/2000 [00:23<00:51, 26.59 step/s, accuracy=0.66, loss=1.49, step=36632]"
      ]
     }
    ],
