--- a/main.ipynb
+++ b/main.ipynb
@@ -764,6 +764,7 @@
     "\n",
     "    # Save the best model so far.\n",
     "    if (step + 1) % save_steps == 0 and best_state_dict is not None:\n",
+    "      save_path = f\"model_{step + 1}_{best_accuracy:.4f}.ckpt\"\n",
     "      torch.save(best_state_dict, save_path)\n",
     "      pbar.write(f\"Step {step + 1}, best model saved. (accuracy={best_accuracy:.4f})\")\n",
     "\n",
@@ -866,6 +867,7 @@
    "source": [
     "import json\n",
     "import csv\n",
+    "import glob\n",
     "from pathlib import Path\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -876,7 +878,7 @@
     "  \"\"\"arguments\"\"\"\n",
     "  config = {\n",
     "    \"data_dir\": \"./Dataset\",\n",
-    "    \"model_path\": \"./model.ckpt\",\n",
+    "    \"model_dir\": \".\",  # directory where model files are saved\n",
     "    \"output_path\": \"./output.csv\",\n",
     "  }\n",
     "\n",
@@ -885,7 +887,7 @@
     "\n",
     "def main(\n",
     "  data_dir,\n",
-    "  model_path,\n",
+    "  model_dir,\n",
     "  output_path,\n",
     "):\n",
     "  \"\"\"Main function.\"\"\"\n",
@@ -908,7 +910,12 @@
     "\n",
     "  speaker_num = len(mapping[\"id2speaker\"])\n",
     "  model = Classifier(n_spks=speaker_num).to(device)\n",
-    "  model.load_state_dict(torch.load(model_path))\n",
+    "\n",
+    "  # new code to automatically find and load the best model\n",
+    "  list_of_files = glob.glob(f\"{model_dir}/model_*.ckpt\")  # get list of all model files\n",
+    "  latest_file = max(list_of_files, key=lambda x: float(x.split('_')[2].split('.')[0]))  # get the best model file\n",
+    "  model.load_state_dict(torch.load(latest_file))\n",
+    "  \n",
     "  model.eval()\n",
     "  print(f\"[Info]: Finish creating model!\",flush = True)\n",
     "\n",
@@ -927,7 +934,7 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "  main(**parse_args())\n"
+    "  main(**parse_args())"
    ]
   }
  ],
