--- a/model_baseline/main.ipynb
+++ b/model_baseline/main.ipynb
@@ -302,7 +302,7 @@
     "def parse_args():\n",
     "    \"\"\"Arguments\"\"\"\n",
     "    config = {\n",
-    "        \"data_dir\": \"./Dataset\",\n",
+    "        \"data_dir\": \"../Dataset\",\n",
     "        \"save_path\": \"model.ckpt\",\n",
     "        \"batch_size\": 256,\n",
     "        \"n_workers\": 0,\n",
@@ -681,7 +681,7 @@
     "def parse_args():\n",
     "  \"\"\"arguments\"\"\"\n",
     "  config = {\n",
-    "    \"data_dir\": \"./Dataset\",\n",
+    "    \"data_dir\": \"../Dataset\",\n",
     "    \"save_path\": \"model.ckpt\",\n",
     "    \"batch_size\": 32,\n",
     "    \"n_workers\": 0,\n",
@@ -712,7 +712,7 @@
     "  train_iterator = iter(train_loader)\n",
     "  print(f\"[Info]: Finish loading data!\",flush = True)\n",
     "\n",
-    "  model = Classifier(d_model=80, n_spks=speaker_num).to(device)\n",
+    "  model = Classifier(n_spks=speaker_num).to(device)\n",
     "  criterion = nn.CrossEntropyLoss()\n",
     "  optimizer = AdamW(model.parameters(), lr=1e-3)\n",
     "  scheduler = get_cosine_schedule_with_warmup(optimizer, warmup_steps, total_steps)\n",
@@ -976,13 +976,7 @@
       " 47%|██████████████████████████████████████▋                                            | 3106/6657 [00:06<00:06, 513.99it/s]\u001b[A\u001b[A\n",
       "\n",
       " 47%|███████████████████████████████████████▎                                           | 3158/6657 [00:06<00:06, 508.93it/s]\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 48%|████████████████████████████████████████                                           | 3209/6657 [00:06<00:06, 506.27it/s]\u001b[A\u001b[A\n",
       "\n",
       " 49%|████████████████████████████████████████▋                                          | 3261/6657 [00:06<00:06, 507.25it/s]\u001b[A\u001b[A\n",
@@ -1232,13 +1226,7 @@
       " 97%|████████████████████████████████████████████████████████████████████████████████   | 6425/6657 [00:19<00:01, 209.42it/s]\u001b[A\u001b[A\n",
       "\n",
       " 97%|████████████████████████████████████████████████████████████████████████████████▎  | 6446/6657 [00:19<00:01, 209.33it/s]\u001b[A\u001b[A\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 97%|████████████████████████████████████████████████████████████████████████████████▋  | 6467/6657 [00:19<00:00, 205.30it/s]\u001b[A\u001b[A\n",
       "\n",
       " 97%|████████████████████████████████████████████████████████████████████████████████▉  | 6489/6657 [00:19<00:00, 208.06it/s]\u001b[A\u001b[A\n",
@@ -1272,7 +1260,7 @@
     "def parse_args():\n",
     "  \"\"\"arguments\"\"\"\n",
     "  config = {\n",
-    "    \"data_dir\": \"./Dataset\",\n",
+    "    \"data_dir\": \"../Dataset\",\n",
     "    \"model_dir\": \".\",  # directory where model files are saved\n",
     "    \"output_path\": \"./output.csv\",\n",
     "  }\n",
