Updated functions to match original, except where modification is necessary

--- a/model_baseline/main.ipynb
+++ b/model_baseline/main.ipynb
@@ -54,48 +54,56 @@
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
-    "\n",
+    "import os\n",
+    "import json\n",
+    "import torch\n",
+    "import random\n",
+    "from pathlib import Path\n",
+    "from torch.utils.data import Dataset\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    " \n",
+    " \n",
     "class myDataset(Dataset):\n",
     "  def __init__(self, data_dir, segment_len=128):\n",
     "    self.data_dir = data_dir\n",
     "    self.segment_len = segment_len\n",
-    "\n",
-    "    # Load the mapping from speaker name to their corresponding id.\n",
+    " \n",
+    "    # Load the mapping from speaker neme to their corresponding id. \n",
     "    mapping_path = Path(data_dir) / \"mapping.json\"\n",
     "    mapping = json.load(mapping_path.open())\n",
     "    self.speaker2id = mapping[\"speaker2id\"]\n",
-    "\n",
+    " \n",
     "    # Load metadata of training data.\n",
     "    metadata_path = Path(data_dir) / \"metadata.json\"\n",
     "    metadata = json.load(open(metadata_path))[\"speakers\"]\n",
-    "\n",
-    "    # Get the total number of speakers.\n",
+    " \n",
+    "    # Get the total number of speaker.\n",
     "    self.speaker_num = len(metadata.keys())\n",
     "    self.data = []\n",
     "    for speaker in metadata.keys():\n",
     "      for utterances in metadata[speaker]:\n",
     "        self.data.append([utterances[\"feature_path\"], self.speaker2id[speaker]])\n",
-    "\n",
+    " \n",
     "  def __len__(self):\n",
     "    return len(self.data)\n",
-    "\n",
+    " \n",
     "  def __getitem__(self, index):\n",
     "    feat_path, speaker = self.data[index]\n",
     "    # Load preprocessed mel-spectrogram.\n",
     "    mel = torch.load(os.path.join(self.data_dir, feat_path))\n",
-    "\n",
-    "    # Segment mel-spectrogram into \"segment_len\" frames.\n",
+    " \n",
+    "    # Segmemt mel-spectrogram into \"segment_len\" frames.\n",
     "    if len(mel) > self.segment_len:\n",
     "      # Randomly get the starting point of the segment.\n",
     "      start = random.randint(0, len(mel) - self.segment_len)\n",
     "      # Get a segment with \"segment_len\" frames.\n",
-    "      mel = torch.FloatTensor(mel[start:start + self.segment_len])\n",
+    "      mel = torch.FloatTensor(mel[start:start+self.segment_len])\n",
     "    else:\n",
     "      mel = torch.FloatTensor(mel)\n",
     "    # Turn the speaker id into long for computing loss later.\n",
     "    speaker = torch.FloatTensor([speaker]).long()\n",
     "    return mel, speaker\n",
-    "\n",
+    " \n",
     "  def get_speaker_number(self):\n",
     "    return self.speaker_num\n",
     "\n",
@@ -104,8 +112,8 @@
     "  # Process features within a batch.\n",
     "  \"\"\"Collate a batch of data.\"\"\"\n",
     "  mel, speaker = zip(*batch)\n",
-    "  # We train the model batch by batch, we need to pad the features in the same batch to make their lengths the same.\n",
-    "  mel = pad_sequence(mel, batch_first=True, padding_value=-20)  # pad log 10^(-20) which is very small value.\n",
+    "  # Because we train the model batch by batch, we need to pad the features in the same batch to make their lengths the same.\n",
+    "  mel = pad_sequence(mel, batch_first=True, padding_value=-20)    # pad log 10^(-20) which is very small value.\n",
     "  # mel: (batch size, length, 40)\n",
     "  return mel, torch.FloatTensor(speaker).long()\n",
     "\n",
@@ -189,7 +197,6 @@
     "  num_cycles: float = 0.5,\n",
     "  last_epoch: int = -1,\n",
     "):\n",
-    "\n",
     "  def lr_lambda(current_step):\n",
     "    # Warmup\n",
     "    if current_step < num_warmup_steps:\n",
@@ -681,7 +688,7 @@
     "def parse_args():\n",
     "  \"\"\"arguments\"\"\"\n",
     "  config = {\n",
-    "    \"data_dir\": \"../Dataset\",\n",
+    "    \"data_dir\": \"./Dataset\",\n",
     "    \"save_path\": \"model.ckpt\",\n",
     "    \"batch_size\": 32,\n",
     "    \"n_workers\": 0,\n",
@@ -710,13 +717,13 @@
     "\n",
     "  train_loader, valid_loader, speaker_num = get_dataloader(data_dir, batch_size, n_workers)\n",
     "  train_iterator = iter(train_loader)\n",
-    "  print(f\"[Info]: Finish loading data!\",flush = True)\n",
+    "  print(f\"[Info]: Finish loading data!\", flush = True)\n",
     "\n",
     "  model = Classifier(n_spks=speaker_num).to(device)\n",
     "  criterion = nn.CrossEntropyLoss()\n",
     "  optimizer = AdamW(model.parameters(), lr=1e-3)\n",
     "  scheduler = get_cosine_schedule_with_warmup(optimizer, warmup_steps, total_steps)\n",
-    "  print(f\"[Info]: Finish creating model!\",flush = True)\n",
+    "  print(f\"[Info]: Finish creating model!\", flush = True)\n",
     "\n",
     "  best_accuracy = -1.0\n",
     "  best_state_dict = None\n",
@@ -1250,7 +1257,6 @@
    "source": [
     "import json\n",
     "import csv\n",
-    "import glob\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -1260,8 +1266,8 @@
     "def parse_args():\n",
     "  \"\"\"arguments\"\"\"\n",
     "  config = {\n",
-    "    \"data_dir\": \"../Dataset\",\n",
-    "    \"model_dir\": \".\",  # directory where model files are saved\n",
+    "    \"data_dir\": \"./Dataset\",\n",
+    "    \"model_path\": \"./model.ckpt\",\n",
     "    \"output_path\": \"./output.csv\",\n",
     "  }\n",
     "\n",
@@ -1270,7 +1276,7 @@
     "\n",
     "def main(\n",
     "  data_dir,\n",
-    "  model_dir,\n",
+    "  model_path,\n",
     "  output_path,\n",
     "):\n",
     "  \"\"\"Main function.\"\"\"\n",
@@ -1293,12 +1299,10 @@
     "\n",
     "  speaker_num = len(mapping[\"id2speaker\"])\n",
     "  model = Classifier(n_spks=speaker_num).to(device)\n",
-    "\n",
     "  # new code to automatically find and load the best model\n",
     "  list_of_files = glob.glob(f\"{model_dir}/model_*.ckpt\")  # get list of all model files\n",
     "  latest_file = max(list_of_files, key=lambda x: float(x.split('_')[2].split('.')[0]))  # get the best model file\n",
     "  model.load_state_dict(torch.load(latest_file))\n",
-    "  \n",
     "  model.eval()\n",
     "  print(f\"[Info]: Finish creating model!\",flush = True)\n",
     "\n",
